--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -18,3 +18,13 @@ configure_file ("present.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("logo1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("help.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+configure_file ("background.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("timer.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("finish_level.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("game_over.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("pacman_dead.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("ghost_eaten.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("present.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("eat_cookie.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("door_open.wav" ${CMAKE_BINARY_DIR} COPYONLY)
