--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -20,3 +20,18 @@ configure_file ("logo1.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("help.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("frightenedGhost.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("eyes.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("freezed_ghost.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("superpacman_present.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("clock_present.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("ice_present.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("life_present.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+configure_file ("background.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("timer.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("finish_level.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("game_over.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("pacman_dead.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("ghost_eaten.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("present.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("eat_cookie.wav" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("door_open.wav" ${CMAKE_BINARY_DIR} COPYONLY)
